--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
       max-height: 800px; 
     }
     .status-badge { 
-      font-size: 3em; 
+      font-size: 2.2em; 
       margin: 0 0 30px; 
-      padding: 20px; 
+      padding: 15px; 
       border-radius: 16px; 
       text-align: center; 
       font-weight: 700; 
       box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
+      white-space: nowrap; 
+      overflow: hidden; 
+      text-overflow: ellipsis; 
     }
     .price-item { 
       margin: 20px 0; 
@@ -76,7 +79,7 @@
       transform: translateY(-4px); 
       box-shadow: 0 8px 30px rgba(0,0,0,0.4); 
     }
-    #actionAdvice { background: #2c0e0e; color: #ff6b6b; }
+    #actionAdvice { background: #2c0e0e; color: #ff6b6b; padding: 15px; border-radius: 12px; margin-bottom: 20px; }
     .loading { color: #8b949e; text-align: center; margin: 30px 0; font-style: italic; }
     .collapsible-section { margin: 15px 0; }
     .collapsible-header { cursor: pointer; padding: 10px; background: #21262d; border-radius: 8px; font-weight: bold; transition: all 0.2s; }
@@ -177,6 +180,7 @@
     const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
     let predictionData = [];
 
+    // Dynamic prediction
     if (predictorIndex.length > 5) {
       const recent = predictorIndex.slice(-5).filter(v => v !== null);
       let last = recent[recent.length - 1];
@@ -190,13 +194,16 @@
       predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
     }
 
+    // Pad predictionData with nulls to match labels length
+    const paddedPrediction = Array(labels.length - predictionData.length).fill(null).concat(predictionData);
+
     const chart = new Chart(ctx, {
       type: 'line',
       data: {
         labels: labels,
         datasets: [
           { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: '#58a6ff', tension: 0.2, fill: false },
-          { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
+          { label: 'Predicted Index (2-Year Forecast)', data: paddedPrediction, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
         ]
       },
       options: {
@@ -277,22 +284,24 @@
     if (currentIndex > 90) currentPhase = 'Thrill';
     if (currentIndex > 95) currentPhase = 'Euphoria';
 
-    // Update status badge with phase
+    // Update status badge with phase (smaller text to avoid giant look)
     document.getElementById('statusBadge').innerHTML = `🟡 WATCHING - ${currentPhase}`;
+    document.getElementById('statusBadge').style.fontSize = '1.8em'; // Shrink it
+    document.getElementById('statusBadge').style.padding = '15px';
     document.getElementById('statusBadge').style.background = '#ffeb3b';
     document.getElementById('statusBadge').style.color = 'white';
 
-    // Force Euphoria red
+    // Force Euphoria red and bold
     document.querySelector('.phase-labels span:last-child').style.color = '#ff6b6b';
     document.querySelector('.phase-labels span:last-child').style.fontWeight = '900';
 
-    // Live prices
+    // Live prices with better error logging
     async function fetchLiveData() {
       try {
         const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
           headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
         });
-        if (!response.ok) throw new Error('API error');
+        if (!response.ok) throw new Error(`API error: ${response.status}`);
         const data = await response.json();
         const pricesDiv = document.getElementById('prices');
         pricesDiv.innerHTML = '';
