--- a/index.html
+++ b/index.html
@@ -57,16 +57,13 @@
       max-height: 800px; 
     }
     .status-badge { 
-      font-size: 2.2em; 
+      font-size: 2em; 
       margin: 0 0 30px; 
       padding: 15px; 
       border-radius: 16px; 
       text-align: center; 
       font-weight: 700; 
       box-shadow: 0 6px 25px rgba(0,0,0,0.5); 
-      white-space: nowrap; 
-      overflow: hidden; 
-      text-overflow: ellipsis; 
     }
     .price-item { 
       margin: 20px 0; 
@@ -194,7 +191,7 @@
       predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
     }
 
-    // Pad predictionData with nulls to match labels length
+    // Pad prediction with nulls to match labels length
     const paddedPrediction = Array(labels.length - predictionData.length).fill(null).concat(predictionData);
 
     const chart = new Chart(ctx, {
@@ -264,10 +261,12 @@
 
     // Animate green fill
     const progressFill = document.getElementById('progressFill');
-    progressFill.style.width = '0%';
-    setTimeout(() => {
-      progressFill.style.width = `${progressPercent}%`;
-    }, 500);
+    if (progressFill) {
+      progressFill.style.width = '0%';
+      setTimeout(() => {
+        progressFill.style.width = `${progressPercent}%`;
+      }, 500);
+    }
 
     // Map current index to phase (Complacency start → Euphoria end)
     let currentPhase = 'Complacency';
@@ -284,23 +283,32 @@
     if (currentIndex > 90) currentPhase = 'Thrill';
     if (currentIndex > 95) currentPhase = 'Euphoria';
 
-    // Update status badge with phase (smaller text to avoid giant look)
-    document.getElementById('statusBadge').innerHTML = `🟡 WATCHING - ${currentPhase}`;
-    document.getElementById('statusBadge').style.fontSize = '1.8em'; // Shrink it
-    document.getElementById('statusBadge').style.padding = '15px';
+    // Update status badge (shortened text to avoid giant look)
+    document.getElementById('statusBadge').innerHTML = `🟡 ${currentPhase}`;
     document.getElementById('statusBadge').style.background = '#ffeb3b';
     document.getElementById('statusBadge').style.color = 'white';
+    document.getElementById('statusBadge').style.fontSize = '1.8em'; // Smaller size
 
     // Force Euphoria red and bold
-    document.querySelector('.phase-labels span:last-child').style.color = '#ff6b6b';
-    document.querySelector('.phase-labels span:last-child').style.fontWeight = '900';
+    const euphoriaSpan = document.querySelector('.phase-labels span:last-child');
+    if (euphoriaSpan) {
+      euphoriaSpan.style.color = '#ff6b6b';
+      euphoriaSpan.style.fontWeight = '900';
+    }
 
-    // Live prices with better error logging
+    // Live prices with timeout fallback
     async function fetchLiveData() {
       try {
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 10000); // 10s timeout
+
         const response = await fetch('https://pro-api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h', {
-          headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' }
+          headers: { 'x-cg-pro-api-key': 'CG-16CjgPwWeLeNVZnNRmrfXiUz' },
+          signal: controller.signal
         });
+
+        clearTimeout(timeoutId);
+
         if (!response.ok) throw new Error(`API error: ${response.status}`);
         const data = await response.json();
         const pricesDiv = document.getElementById('prices');
